* Regression: HUD n_bars now works again
* Bug with NPCs continuing to lock on dead ships fixed
* Laser shot positioning fixed
* Bug with manifest checks in guiScreenChanged when launching fixed
* Reasonably skilled pilots will now remember to look where they're
  going when fleeing
* Shields now also protect subentities
* Edge-case for damage to main station fixed

-------------------------------------------------------------------------------

Changes between Oolite 1.76.1 and Oolite 1.77:

Gameplay:
=========

General:
--------
* Enabled reverse-stepping through list of beacons shown by the Advanced
  Space Compass.  The default key is '|' (Shift-'\').
* Energy bomb made strict mode only.
* Ships with a bounty will often avoid the main station
* A certain classified device is now possible to repair and has had
  minor changes to its behaviour.
* Improvements to sound effect handling for scoop and laser
* Several efficiency improvements for smoother gameplay
* New combat behaviour and AI, including:
	More consistent missile explosion behaviour
	Smarter Thargoids
	Smarter use of turret weapons
	Better reactions against cloaked opponents
	Better reaction to deployment of Q-mines
	NPCs can now use side weapons
	NPC lasers now equivalent to player lasers in terms of rate of fire
	and overheating.

* Gamma control for SDL builds
* System populator cleaner, and hermits now semi-persistent
* Longer visibility distance
* Criminal behaviour sanctions now equivalent for player and NPCs
* Witchspace exit speed now depends on the lead ship, and player
  following NPC through a wormhole now behaves better.
* Keyboard precision mode
* Stations can now have multiple docks
* Docking Clearance Protocol now a Game Option
* Interfaces screen on docked F4 for accessing arbitrary station or
  ship systems. Passenger and cargo contracts moved to this screen;
  parcel contracts added.
* Can switch to custom views while paused
* Improved rendering of planetary atmosphere and sun