@@ -726,6 +726,7 @@ typedef enum
 
 - (BOOL) witchJumpChecklist:(BOOL)isGalacticJump;
 - (void) enterGalacticWitchspace;
+- (void) setJumpType:(BOOL)isGalacticJump;
 
 - (BOOL) takeInternalDamage;
 
